--- a/Web/html/index.html
+++ b/Web/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourStyle</title>
-    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Web/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/css/estilos-index.css">
 </head>
 <body>
@@ -14,15 +14,15 @@
         </div>
         <div class="profile-icon">
 			<a href="/html/perfil.html">
-				<img src="/images/perfil.png" alt="Perfil">
+				<img src="Web/images/perfil.png" alt="Perfil">
 			</a>
 		</div>
         <nav>
             <ul class="menu">
-                <li><a href="/html/index.html">Inicio</a></li>
-                <li><a href="/html/style.html">Estilo</a></li>
-                <li><a href="/html/moda.html">Moda</a></li>
-                <li><a href="/html/contactanos.html">Contáctanos</a></li>
+                <li><a href="Web/html/index.html">Inicio</a></li>
+                <li><a href="Web/html/style.html">Estilo</a></li>
+                <li><a href="Web/html/moda.html">Moda</a></li>
+                <li><a href="Web/html/contactanos.html">Contáctanos</a></li>
             </ul>
         </nav>
         <div class="menu-icon">&#9776;</div>
@@ -31,19 +31,19 @@
 	<div class ="slider"> 
 		<ul>
 			<li>
-				<img src="/images/imagen4.jpg" alt="">
+				<img src="Web/images/imagen4.jpg" alt="">
 			</li>
 			<li>
-				<img src="/images/imagen1.jpg" alt="">
+				<img src="Web/images/imagen1.jpg" alt="">
 			</li>
 			<li>
-				<img src="/images/imagen2.jpg" alt="">
+				<img src="Web/images/imagen2.jpg" alt="">
 			</li>
 			<li>
-				<img src="/images/imagen3.jpg" alt="">
+				<img src="Web/images/imagen3.jpg" alt="">
 			</li>
 			<li>
-				<img src="/images/imagen4.jpg" alt="">
+				<img src="Web/images/imagen4.jpg" alt="">
 			</li>
 		</ul>
 
@@ -51,14 +51,14 @@
 	<div class="tendencias">
 		<h2> Las tendencias del momento </h2>
 		<div class="image-container">
-			<img src="/images/1.png" alt="Image 1">
-			<img src="/images/2.png" alt="Image 2">
-			<img src="/images/3.png" alt="Image 3">
-			<img src="/images/4.png" alt="Image 4">
-			<img src="/images/5.png" alt="Image 5">
-			<img src="/images/6.png" alt="Image 6">
-			<img src="/images/7.png" alt="Image 7">
-			<img src="/images/8.png" alt="Image 8">
+			<img src="Web/images/1.png" alt="Image 1">
+			<img src="Web/images/2.png" alt="Image 2">
+			<img src="Web/images/3.png" alt="Image 3">
+			<img src="Web/images/4.png" alt="Image 4">
+			<img src="Web/images/5.png" alt="Image 5">
+			<img src="Web/images/6.png" alt="Image 6">
+			<img src="Web/images/7.png" alt="Image 7">
+			<img src="Web/images/8.png" alt="Image 8">
 		  </div>
 	</div>
 
